--- a/index.html
+++ b/index.html
@@ -129,73 +129,82 @@
         <div class="projects">
           <div class="project">
             <div class="project-info">
-              <h1>React Projects</h1>
-              <h2>React Project Portfolio</h2>
+              <h1>Frage</h1>
+              <h2>React Project</h2>
               <p>
-                It is a link to my React JS Projects. You can check my best
-                works from here.
-              </p>
-              <a target="_blank" class="gradient-btn" href="reactprojects.html"
-                >view projects</a
-              >
-            </div>
-            <a target="_blank" class="linked-img" href="reactprojects.html">
-              <img src="img/React Cover.jpeg" alt="" />
-            </a>
-          </div>
-          <div class="project">
-            <div class="project-info">
-              <h1>JavaScript Projects</h1>
-              <h2>JavaScript Project Portfolio</h2>
-              <p>
-                It is a link to my JavaScript Projects. You can check my best
-                works from here.
-              </p>
-              <a target="_blank" class="gradient-btn" href="jsprojects.html"
-                >view projects</a
-              >
-            </div>
-            <a target="_blank" class="linked-img" href="jsprojects.html">
-              <img src="img/js.jpg" alt="" />
-            </a>
-          </div>
-          <div class="project">
-            <div class="project-info">
-              <h1>Front-End Projects</h1>
-              <h2>Front-End Project Portfolio</h2>
-              <p>
-                It is a link to my Front-End Projects. You can check my best
-                works from here.
-              </p>
-              <a target="_blank" class="gradient-btn" href="frontend.html"
-                >view projects</a
-              >
-            </div>
-            <a target="_blank" class="linked-img" href="frontend.html">
-              <img src="img/uiux.png" alt="" />
-            </a>
-          </div>
-          <div id="ui" class="project">
-            <div class="project-info">
-              <h1>Graphics Design</h1>
-              <h2>Graphics Designing Portfolio</h2>
-              <p>
-                It is a link to my Graphics Designing portfolio. You can check
-                my best works from here.
+                It is a website for online perfume shop. Their main objective is
+                to sell perfumes online. They have a huge varity of collection
+                of perfume. They have a seperate collection for men and women,
+                all though their price range is pretty high.
               </p>
               <a
                 target="_blank"
                 class="gradient-btn"
-                href="https://www.behance.net/mohaiminul"
-                >view projects</a
+                href="https://frage-website.firebaseapp.com/"
+                >view project</a
               >
             </div>
             <a
               target="_blank"
               class="linked-img"
-              href="https://www.behance.net/mohaiminul"
+              href="https://frage-website.firebaseapp.com/"
             >
-              <img src="img/Graphics.jpg" alt="" />
+              <img src="img/frage.jpg" alt="" />
+            </a>
+          </div>
+          <div class="project">
+            <div class="project-info">
+              <h1>Tuzy</h1>
+              <h2>React Project</h2>
+              <p>
+                It is a website for online Tour management company. Their main
+                objective is to arrange tours and invite people all over the
+                world, They also have good offers for tours that are less
+                expansive. They provide visa assistance and also arranges hotels
+                for the travellers. They also have a varity of packages that
+                lets the travellers go on fun trips such as hicking, camping and
+                sorts.
+              </p>
+              <a
+                target="_blank"
+                class="gradient-btn"
+                href="https://tourism-website-dd73a.web.app/"
+                >view project</a
+              >
+            </div>
+            <a
+              target="_blank"
+              class="linked-img"
+              href="https://tourism-website-dd73a.web.app/"
+            >
+              <img src="img/tuzy.jpg" alt="" />
+            </a>
+          </div>
+          <div class="project">
+            <div class="project-info">
+              <h1>Health Monitor</h1>
+              <h2>React Project</h2>
+              <p>
+                It is a website for online consultation among paitent and
+                doctors. The paitents can register to the website and consult a
+                doctor via internet. There are a variety of doctors available in
+                the site from different medical fields. the paitent can simple
+                choose his or her desired field and consult a available doctor
+                from that feild.
+              </p>
+              <a
+                target="_blank"
+                class="gradient-btn"
+                href="https://health-monitor-e36e1.web.app/"
+                >view project</a
+              >
+            </div>
+            <a
+              target="_blank"
+              class="linked-img"
+              href="https://health-monitor-e36e1.web.app/"
+            >
+              <img src="img/health_monitor.jpg" alt="" />
             </a>
           </div>
         </div>
