--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/details.css" />
-    <title>Frontend Projects</title>
+    <title>Projects Details</title>
   </head>
   <body>
     <div class="cursor"></div>
@@ -20,16 +20,43 @@
         <div class="project-details">
           <h1 class="display-5 text-white mb-4">Screenshots</h1>
           <div class="row">
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img src="https://i.ibb.co/stR1nxw/frage.jpg" alt="" />
             </div>
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img
+                src="https://i.ibb.co/71z9Tt0/frage-screenshot2.jpg"
+                alt=""
+              />
             </div>
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img
+                src="https://i.ibb.co/WKC3PHx/frage-screenshot1.jpg"
+                alt=""
+              />
             </div>
           </div>
+          <a
+            class="btn-type1"
+            href="https://frage-website.web.app/"
+            target="_blank"
+            class="cta"
+            >Live Site</a
+          >
+          <a
+            class="btn-type1"
+            href="https://github.com/Mohaiminul69/frage-client-side"
+            target="_blank"
+            class="cta"
+            >Client-Side Code</a
+          >
+          <a
+            class="btn-type1"
+            href="https://github.com/Mohaiminul69/frage-server-side"
+            target="_blank"
+            class="cta"
+            >server-Side Code</a
+          >
           <h1 class="display-5 text-white text-left my-3">Details</h1>
           <p class="text-white fs-4">
             It is a website for online perfume shop. Their main objective is to
