--- a/project2.html
+++ b/project2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/details.css" />
-    <title>Frontend Projects</title>
+    <title>Projects Details</title>
   </head>
   <body>
     <div class="cursor"></div>
@@ -16,57 +16,68 @@
 
     <section id="projects">
       <div class="container">
-        <h1 class="section-title">Frage <span>Pro</span>jects</h1>
+        <h1 class="section-title">Tuzy <span>Pro</span>jects</h1>
         <div class="project-details">
           <h1 class="display-5 text-white mb-4">Screenshots</h1>
           <div class="row">
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img src="https://i.ibb.co/cTZkyWP/tuzy.jpg" alt="" />
             </div>
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img src="https://i.ibb.co/8KZ7LMb/tuzy-screenshot1.jpg" alt="" />
             </div>
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img src="https://i.ibb.co/F4M9gYf/tuzy-screenshot2.jpg" alt="" />
             </div>
           </div>
+          <a
+            class="btn-type1"
+            href="https://tourism-website-dd73a.web.app/"
+            target="_blank"
+            class="cta"
+            >Live Site</a
+          >
+          <a
+            class="btn-type1"
+            href="https://github.com/Mohaiminul69/tuzy-client-side"
+            target="_blank"
+            class="cta"
+            >Client-Side Code</a
+          >
+          <a
+            class="btn-type1"
+            href="https://github.com/Mohaiminul69/tuzy-server-side"
+            target="_blank"
+            class="cta"
+            >server-Side Code</a
+          >
           <h1 class="display-5 text-white text-left my-3">Details</h1>
           <p class="text-white fs-4">
-            It is a website for online perfume shop. Their main objective is to
-            sell perfumes online. They have a huge varity of collection of
-            perfume. They have a seperate collection for men and women, all
-            though their price range is pretty high.
+            It is a website for online Tour management company. Their main
+            objective is to arrange tours and invite people all over the world,
+            They also have good offers for tours that are less expansive. They
+            provide visa assistance and also arranges hotels for the travellers.
+            They also have a varity of packages that lets the travellers go on
+            fun trips such as hicking, camping and sorts.
           </p>
           <ul class="text-white fs-5">
             <li>
-              It lets you Login to the App and lets you explore the perfume
-              collection.
+              It lets you Login to the App and lets you browse through the
+              tours.
             </li>
             <li>
-              Lets you to order a perfume online and stores your perchase info
-              in the database.
+              Lets you Book a tour online and keeps your booking data saved in
+              database.
             </li>
             <li>
-              And shows you all of your previous orders, once you login to the
+              And shows you all of your booked tours once you login to the
               website, you can also cancel them.
             </li>
             <li>
-              It also has a admin panel, that lets the admin manage the
-              products, add new products, and manage the orders, you cannot see
-              the admin dashboard if you are not an admin, the admin dashboard
-              is separate and password protected.
+              It lets you manage the tours that the users book, such as
+              approving the booking or canceling them.
             </li>
-            <li>
-              As a customer you can add a review to the website of others and
-              yourself to see.
-            </li>
-            <li>
-              But if you really want to peek into the admin dashboard the email
-              is admin@admin.com and password is 123456, you are welcome, but do
-              not delete any existing orders from there, please create as many
-              products as you like, and delete them as you wish, so that my
-              precious website stays as cute as i created.
-            </li>
+            <li>And it also lets you create a new tour.</li>
           </ul>
         </div>
       </div>
