--- a/project3.html
+++ b/project3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/details.css" />
-    <title>Frontend Projects</title>
+    <title>Projects Details</title>
   </head>
   <body>
     <div class="cursor"></div>
@@ -16,56 +16,62 @@
 
     <section id="projects">
       <div class="container">
-        <h1 class="section-title">Frage <span>Pro</span>jects</h1>
+        <h1 class="section-title">Health Monitor <span>Pro</span>jects</h1>
         <div class="project-details">
           <h1 class="display-5 text-white mb-4">Screenshots</h1>
           <div class="row">
-            <div class="col">
+            <div class="col-md-4 mb-3">
               <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
             </div>
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img
+                src="https://i.ibb.co/XYjGzQt/health-screenshot1.jpg"
+                alt=""
+              />
             </div>
-            <div class="col">
-              <img src="https://i.ibb.co/HTgmshK/health-monitor.jpg" alt="" />
+            <div class="col-md-4 mb-3">
+              <img
+                src="https://i.ibb.co/BwrgPfq/health-screenshot2.jpg"
+                alt=""
+              />
             </div>
           </div>
+          <a
+            class="btn-type1"
+            href="https://health-monitor-e36e1.web.app/"
+            target="_blank"
+            class="cta"
+            >Live Site</a
+          >
+          <a
+            class="btn-type1"
+            href="https://github.com/Mohaiminul69/health-monitor"
+            target="_blank"
+            class="cta"
+            >Code Link</a
+          >
           <h1 class="display-5 text-white text-left my-3">Details</h1>
           <p class="text-white fs-4">
-            It is a website for online perfume shop. Their main objective is to
-            sell perfumes online. They have a huge varity of collection of
-            perfume. They have a seperate collection for men and women, all
-            though their price range is pretty high.
+            It is a website for online consultation among paitent and doctors.
+            The paitents can register to the website and consult a doctor via
+            internet. There are a variety of doctors available in the site from
+            different medical fields. the paitent can simple choose his or her
+            desired field and consult a available doctor from that feild.
           </p>
           <ul class="text-white fs-5">
+            <li>It lets you Login & Register to the App.</li>
+            <li>Makes routing possible without reloading the entire page.</li>
             <li>
-              It lets you Login to the App and lets you explore the perfume
-              collection.
+              And shows you the details of an individual medical service by
+              redirecting to a dynamic route.
             </li>
             <li>
-              Lets you to order a perfume online and stores your perchase info
-              in the database.
+              It prevents you from going to a secure or private route without
+              being logged in into the app.
             </li>
             <li>
-              And shows you all of your previous orders, once you login to the
-              website, you can also cancel them.
-            </li>
-            <li>
-              It also has a admin panel, that lets the admin manage the
-              products, add new products, and manage the orders, you cannot see
-              the admin dashboard if you are not an admin, the admin dashboard
-              is separate and password protected.
-            </li>
-            <li>
-              As a customer you can add a review to the website of others and
-              yourself to see.
-            </li>
-            <li>
-              But if you really want to peek into the admin dashboard the email
-              is admin@admin.com and password is 123456, you are welcome, but do
-              not delete any existing orders from there, please create as many
-              products as you like, and delete them as you wish, so that my
-              precious website stays as cute as i created.
+              And redirects you to the desired page you wanted to visit after
+              you login.
             </li>
           </ul>
         </div>
